--- a/packages/ui-default/pages/courses_main.page.styl
+++ b/packages/ui-default/pages/courses_main.page.styl
@@ -5,7 +5,7 @@
     padding-bottom: 10px
     width: 100%
     // height: 200px
-    // border-radius: 10px
+    border-radius: 10px
     border-style: solid
     border-color: rgba(#AFC2C9, 0.6)
     border-width: 1px
@@ -39,3 +39,5 @@
       font-size: 10px
     .course-card .course-card-body
       font-size: 10px
+    .course-card
+      box-shadow: none
