--- a/packages/ui-default/templates/components/user.html
+++ b/packages/ui-default/templates/components/user.html
@@ -1,33 +1,31 @@
-{% macro render_inline(udoc, avatar = true, badge = true, modbadge = true) %}
+{% macro render_inline(udoc, avatar = true, badge = true, modbadge = true, classname = true) %}
   {% if udoc %}
     <span class="user-profile-link">
       {% if avatar %}
         <img class="small user-profile-avatar v-center" loading="lazy" src="{{ avatarUrl(udoc.avatar|default('')) }}" width="20" height="20">
       {% endif %}
-      {#
-      {% if handler
-        .user
-        .hasPriv(PRIV.PRIV_USER_PROFILE) %}
-      #}
-        {% if udoc.name and udoc.class %}
+      {% if classname %}
+        {% if udoc.class %}
           <a href="{{ url('student_class', cls=udoc.class) }}" data-tooltip="专业班级：{{ udoc.class }}">
             <span class="text-badge">{{ udoc.class }}</span>
           </a>
-          <a class="user-profile-name" href="{{ url('user_detail', uid=udoc._id) }}">
-            <span>{{ udoc.name }}</span>
-          </a>
         {% else %}
-          {% if not udoc.class %}
-            <span class="text-badge" data-tooltip="该用户未填写班级信息">未完善</span>
-          {% endif %}
-          <a class="user-profile-name" href="{{ url('user_detail', uid=udoc._id) }}">
-            {% if udoc.displayName %}
-              {{ udoc.displayName }}
-            {% else %}
-              {{ udoc.uname }}
-            {% endif %}
-          </a>
+          <span class="text-badge" data-tooltip="该用户未填写班级信息">未完善</span>
         {% endif %}
+      {% endif %}
+      {% if udoc.name %}
+        <a class="user-profile-name" href="{{ url('user_detail', uid=udoc._id) }}">
+          <span>{{ udoc.name }}</span>
+        </a>
+      {% else %}
+        <a class="user-profile-name" href="{{ url('user_detail', uid=udoc._id) }}">
+          {% if udoc.displayName %}
+            {{ udoc.displayName }}
+          {% else %}
+            {{ udoc.uname }}
+          {% endif %}
+        </a>
+      {% endif %}
       {#{% else %}
         {% if udoc.displayName %}
           {{ udoc.displayName }} ({{ udoc.uname }})
