首页ranking表头右对齐

--- a/packages/ui-default/templates/partials/homepage/ranking.html
+++ b/packages/ui-default/templates/partials/homepage/ranking.html
@@ -16,7 +16,7 @@
             <tr>
               <th class="col--rank">{{ _('Rank') }}</th>
               <th class="col--user">{{ _('Username') }}</th>
-              <th class="col--user">{{ _('Accept') }}</th>
+              <th class="col--rp">{{ _('Accept') }}</th>
               <th class="col--rp">{{ _('RP') }}</th>
               {% if handler.user.hasPriv(PRIV.PRIV_USER_PROFILE) %}
               <th class="col--bio">{{ _('Bio') }}</th>
