作业最长延期默认填充0

--- a/packages/ui-default/templates/homework_edit.html
+++ b/packages/ui-default/templates/homework_edit.html
@@ -58,7 +58,7 @@
               columns:4,
               label:'Extension (days)',
               name:'extensionDays',
-              value:extension_days
+              value:extension_days|default(0)
           }) }}
           <div class="row"><div class="columns">
             <label>
