--- a/packages/ui-default/templates/courses_main.html
+++ b/packages/ui-default/templates/courses_main.html
@@ -25,7 +25,7 @@
                             <div class="medium-3 columns">
                                 <div class="course-card">
                                     <div class="course-card-header">
-                                        <h1>{{ item.name }}</h1>
+                                        <h2 style="font-weight: normal">{{ item.name }}</h2>
                                     </div>
                                     <div class="course-card-body">
                                         <p>创建者：{{ user.render_inline(uDocs[item.owner],false,false,false) }}</p>
