更改样式 使成绩表横向滚动

--- a/packages/ui-default/components/table/table.page.styl
+++ b/packages/ui-default/components/table/table.page.styl
@@ -47,6 +47,7 @@
 
 .section__table-container
   overflow: hidden
+  overflow-x: auto
 
 .section__table-header
   background: $table-header-bg-color
