--- a/packages/ui-default/templates/contest_scoreboard.html
+++ b/packages/ui-default/templates/contest_scoreboard.html
@@ -1,6 +1,6 @@
 {% import "components/paginator.html" as paginator with context %}
 {% extends "layout/basic.html" %}
-{% set type = 'homework' if tdoc.docType == 60 else 
+{% set type = 'homework' if tdoc.docType == 60 else
   'contest' %}
 {% block content %}
   <div class="row">
@@ -16,7 +16,7 @@
             {{ _('Export as CSV') }}
           </a>
         </div>
-        <div class="section__body no-padding">
+        <div class="section__body no-padding horizontal-scroll">
           <table class="data-table">
             <colgroup>
               {%- for column in rows[0] -%}
@@ -43,8 +43,7 @@
                     {%- for column in row -%}
                       <td class="col--{{ rows[0][loop.index0]['type'] }}"{% if column.style %} style="{{ column.style }}"{% endif %}>
                         {% if column.type == 'user' %}
-                          {{ user.render_inline(udict[column.raw], badge=false) }}
-                          {# {{ user.render_class(udict[column.raw]) }} #}
+                          {{ user.render_inline(udict[column.raw], badge=false, classname=false) }}
                         {% elif column.type == 'record' and column.raw %}
                           <a href="{{ url('record_detail', rid=column.raw) }}">
                             <span style="font-weight:bold;color:{{ utils.status.getScoreColor(column.score|default(column.value)) }}">{{ column.value|replaceBr|safe }}</span>
