--- a/packages/ui-default/pages/contest_scoreboard.page.styl
+++ b/packages/ui-default/pages/contest_scoreboard.page.styl
@@ -11,6 +11,7 @@
     text-align: center
 
   .col--problem_detail
+    width: rem(100px)
     border-left: 1px solid $table-border-color
     text-align: center
 
