--- a/packages/ui-default/templates/contest_scoreboard.html
+++ b/packages/ui-default/templates/contest_scoreboard.html
@@ -16,7 +16,7 @@
             {{ _('Export as CSV') }}
           </a>
         </div>
-        <div class="section__body no-padding horizontal-scroll">
+        <div class="section__body no-padding overflow-hidden-horizontal">
           <table class="data-table">
             <colgroup>
               {%- for column in rows[0] -%}
