优化课程样式

--- a/packages/ui-default/pages/courses_main.page.styl
+++ b/packages/ui-default/pages/courses_main.page.styl
@@ -1,21 +1,26 @@
 .page--courses_main
   .course-card
     display: inline-block
-    padding: 20px
-    padding-bottom: 10px
+    padding: 15px 20px
+    padding-bottom: 0
     width: 100%
-    // height: 200px
-    border-radius: 10px
     border-style: solid
-    border-color: rgba(#AFC2C9, 0.6)
+    border-color: rgba(#AFC2C9, 0.4)
     border-width: 1px
-    box-shadow: 0 2px 3px rgba(#AFC2C9, 0.3)
-    // background-color: azure
+    box-shadow: 0 2px 3px rgba(#AFC2C9, 0.4)
+    transition: transform .2s, box-shadow .5s
+
+  .course-card:hover
+    transform: scale(1.05) translateY(-5px)
+    box-shadow: 0 2px 8px rgba(#AFC2C9, 0.5)
 
   .course-card .course-card-header
     font-size: 12px
-    
+
   .course-card .course-card-header h1
+    overflow: hidden
+    text-overflow: ellipsis
+    white-space: nowrap
     font-weight: normal
 
   .course-card .course-card-body
@@ -23,6 +28,9 @@
     margin-top: 10px
 
   .course-card .course-card-body p
+    overflow: hidden
+    text-overflow: ellipsis
+    white-space: nowrap
     padding: 5px 0 5px 0
     line-height: 20px
 
