--- a/packages/ui-default/templates/main.html
+++ b/packages/ui-default/templates/main.html
@@ -49,8 +49,10 @@
       {% if domain['_id'] !== 'system' %}
         <div class="section side">
           <div class="section__header">
-            <h1 class="section__title"><strong>当前域：{{ domain['name'] }}</strong></h1>
-            <div class="section__body"></div>
+            <h1 class="section__title">当前域</h1>
+            <div class="section__body" style="padding-left: 0">
+              {{ domain['name'] }}
+            </div>
           </div>
         </div>
       {% endif %}
