--- a/packages/ui-default/templates/user_register_mail_sent.html
+++ b/packages/ui-default/templates/user_register_mail_sent.html
@@ -3,7 +3,8 @@
 <div class="immersive--content immersive--center">
   <h1>{{ _('Sign Up') }}</h1>
   <div class="text-center">
-    {{ _('Sign up mail has been sent to your email.') }}
+    <p>{{ _('Sign up mail has been sent to your email.') }}</p>
+    <p>若未收到邮件，请查看垃圾箱。</p>
   </div>
 </div>
 {% endblock %}
