--- a/packages/ui-default/templates/partials/homework_sidebar.html
+++ b/packages/ui-default/templates/partials/homework_sidebar.html
@@ -58,6 +58,9 @@
       </a></li>
     {% endif %}
     {% if handler.user.own(tdoc) or handler.user.hasPriv(PRIV.PRIV_READ_RECORD_CODE) or handler.user.hasPerm(perm.PERM_READ_RECORD_CODE) %}
+      <li class="menu__item"><a class="menu__link" href="{{ url('record_main', query={uidOrName:'', tid:tdoc.docId}) }}" data-no-instant target="__blank">
+        <span class="icon record-status--icon pending"></span> {{ _('查看全部评测记录') }}
+      </a></li>
       <li class="menu__item"><a class="menu__link" href="{{ url('homework_code', tid=tdoc.docId) }}" data-no-instant>
         <span class="icon icon-download"></span> {{ _('Export All Code') }}
       </a></li>
