--- a/packages/ui-default/templates/homework_main.html
+++ b/packages/ui-default/templates/homework_main.html
@@ -24,7 +24,7 @@
         {{ nothing.render('There is no homework so far ╰(*°▽°*)╯') }}
       {% else %}
         <ol class="section__list homework__list hasjs--hide">
-        {%- for tdoc in tdocs -%}
+        {%- for tdoc in tdocs|sort(attr='topPinned',reverse=true) -%}
           <li class="section__list__item homework__item">
             <div class="media">
               <div class="media__left medium">
@@ -34,7 +34,13 @@
                 </div>
               </div>
               <div class="media__body medium">
-                <h1 class="homework__title"><a href="{{ url('homework_detail', tid=tdoc.docId) }}" data-emoji-enabled>{{ tdoc.title }}</a></h1>
+                <h1 class="homework__title">
+                  {% if tdoc['topPinned'] %}
+                    <span style="font-size:18px; font-weight:bold; color:#993399;">「置顶」</span>
+                  {% endif %}
+                  <a href="{{ url('homework_detail', tid=tdoc.docId) }}" data-emoji-enabled>{{ tdoc.title }}
+                  </a>
+                </h1>
                 <ul class="supplementary list">
                   <li>
                     {{ _('Status') }}: <span class="homework-status--text {{ model.contest.getStatus(tdoc) }}">{{ _(model.contest.statusText(tdoc)) }}</span>
