为创建作业和比赛添加默认描述

--- a/packages/ui-default/templates/homework_edit.html
+++ b/packages/ui-default/templates/homework_edit.html
@@ -82,7 +82,7 @@
               columns:null,
               label:'Content',
               name:'content',
-              value:tdoc['content']|default(''),
+              value:tdoc['content']|default('该管理员很懒，啥都没写'),
               markdown:true
           }) }}
           <div class="row"><div class="columns">
