--- a/packages/ui-default/templates/contest_edit.html
+++ b/packages/ui-default/templates/contest_edit.html
@@ -78,7 +78,7 @@
             columns:null,
             label:'Content',
             name:'content',
-            value:tdoc['content']|default(''),
+            value:tdoc['content']|default('该管理员很懒，啥都没写'),
             markdown:true
           }) }}
           <div class="row">
