默认占位语句修改

--- a/packages/ui-default/templates/homework_edit.html
+++ b/packages/ui-default/templates/homework_edit.html
@@ -82,7 +82,7 @@
               columns:null,
               label:'Content',
               name:'content',
-              value:tdoc['content']|default('该管理员很懒，啥都没写'),
+              value:tdoc['content']|default(_("This person is lazy and didn't write anything...")),
               markdown:true
           }) }}
           <div class="row"><div class="columns">
