将讨论改为公告

--- a/packages/ui-default/templates/discussion_detail.html
+++ b/packages/ui-default/templates/discussion_detail.html
@@ -69,7 +69,7 @@
           </li>
         </ul>
       </div>
-      <div class="section">
+      <!-- <div class="section">
         <div class="section__header">
           <h1 class="section__title">{{ _('{0} comments').format(drcount) }}</h1>
         </div>
@@ -102,7 +102,7 @@
             {{ nothing.render('No comments so far...') }}
           {% endif %}
         </div>
-      </div>
+      </div> -->
     </div>
     <div class="medium-3 columns">
       {% set udoc = udict[ddoc.owner] %}
