进一步优化公告

--- a/packages/ui-default/templates/discussion_main_or_node.html
+++ b/packages/ui-default/templates/discussion_main_or_node.html
@@ -38,7 +38,15 @@
       </div>
     </div>
   {% endif %}
-  {% include 'partials/discussion_nodes_widget.html' %}
+  <div class="section side nojs--hide">
+    <div class="section__header">
+      <h1 class="section__title">公告</h1>
+    </div>
+    <div class="section__body typo">
+      <span><b>普通用户仅可查看公告。</b></span>
+    </div>
+  </div>
+  <!-- {% include 'partials/discussion_nodes_widget.html' %} -->
   </div>
 </div>
 {% endblock %}
