--- a/packages/ui-default/templates/partials/discussion_list.html
+++ b/packages/ui-default/templates/partials/discussion_list.html
@@ -10,8 +10,8 @@
       <div class="media">
         <div class="media__left">
           <div class="discussion__replies numbox">
-            <div class="numbox__num large">{{ ddoc.nReply }}</div>
-            <div class="numbox__text">{{ _('Comments') }}</div>
+            <div class="numbox__num large">{{ ddoc.views }}</div>
+            <div class="numbox__text">{{ _('已读') }}</div>
           </div>
         </div>
         <div class="media__body top">
