完善班级页面

--- a/packages/ui-default/pages/stu_class_list.page.styl
+++ b/packages/ui-default/pages/stu_class_list.page.styl
@@ -1,4 +1,8 @@
 .page--stu_class_list
+  .stu-classlist td
+    height: rem(50px)
+    font-size: 14px
+
   .col--rank
     width: rem(100px)
     position: relative
@@ -25,5 +29,5 @@
     width: rem(160px)
 
   +mobile()
-    .col--rpavg, .col--rpsum, .col--weight, .col--rpavg, .col--submit
+    .col--rpavg, .col--rpsum, .col--weight, .col--rpavg, .col--submit, .stu-starclass
       display: none
