完善班级页面

--- a/packages/ui-default/pages/stu_class_list.page.styl
+++ b/packages/ui-default/pages/stu_class_list.page.styl
@@ -3,6 +3,11 @@
     height: rem(50px)
     font-size: 14px
 
+  .stu-classlist>tr:nth-child(-n+3) .col--rank
+    height: rem(80px)
+    font-size: 22px
+    font-weight: 300
+
   .col--rank
     width: rem(100px)
     position: relative
