修改一些提示

--- a/packages/ui-default/templates/contest_edit.html
+++ b/packages/ui-default/templates/contest_edit.html
@@ -78,7 +78,7 @@
             columns:null,
             label:'Content',
             name:'content',
-            value:tdoc['content']|default('该管理员很懒，啥都没写'),
+            value:tdoc['content']|default('[^_^]:若需要写内容请删除该注释，若不需要写内容无需删除该注释，会自动不显示'),
             markdown:true
           }) }}
           <div class="row">
