--- a/packages/ui-default/templates/homework_edit.html
+++ b/packages/ui-default/templates/homework_edit.html
@@ -82,7 +82,7 @@
               columns:null,
               label:'Content',
               name:'content',
-              value:tdoc['content']|default(_("[^_^]:This person is lazy and didn't write anything...")),
+              value:tdoc['content']|default(_("[^_^]:若需要写内容请删除该注释，若不需要写内容无需删除该注释，会自动不显示")),
               markdown:true
           }) }}
           <div class="row"><div class="columns">
