--- a/packages/ui-default/templates/partials/problem_list.html
+++ b/packages/ui-default/templates/partials/problem_list.html
@@ -53,7 +53,7 @@
           {% endif %}
         {% endif %}
         <td class="col--name col--problem-name">
-          {% if not pdoc.data.length %}<span style="color: red">(无测试数据)</span>{% endif %}
+          <!-- {% if not pdoc.data.length %}<span style="color: red">(无测试数据)</span>{% endif %} -->
           {% if handler.user.hasPriv(PRIV.PRIV_USER_PROFILE) %}
             <form class="form--inline" action="{{ url('problem_main') }}" method="post">
               <input type="hidden" name="pid" value="{{ pdoc.docId }}">
