--- a/packages/ui-default/templates/contest_scoreboard.html
+++ b/packages/ui-default/templates/contest_scoreboard.html
@@ -2,71 +2,82 @@
 {% extends "layout/basic.html" %}
 {% set type = 'homework' if tdoc.docType == 60 else 'contest' %}
 {% block content %}
-<div class="row"><div class="medium-12 columns">
-  <div class="section visible">
-    <div class="section__header">
-      <a class="button" target="_blank" href="{{ url(type + '_scoreboard_download', tid=tdoc.docId, ext='html') }}">
-        <span class="icon icon-download"></span> {{ _('Export as HTML') }}
-      </a>
-      <a class="button" href="{{ url(type + '_scoreboard_download', tid=tdoc.docId, ext='csv') }}">
-        <span class="icon icon-download"></span> {{ _('Export as CSV') }}
-      </a>
-    </div>
-    <div class="section__body no-padding overflow-hidden-horizontal">
-      <table class="data-table">
-        <colgroup>
-        {%- for column in rows[0] -%}
-          <col class="col--{{ column.type }}">
-        {%- endfor -%}
-        </colgroup>
-        <thead>
-          <tr>
-          {%- for column in rows[0] -%}
-            <th class="col--{{ column.type }}">
-            {% if column.type == 'problem_detail' %}
-              <a href="{{ url('problem_detail', pid=column.raw, query={tid:tdoc.docId}) }}" data-tooltip="{{ pdict[column.raw].title }}">{{ column.value }}</a>
-            {% else %}
-              {{ column.value }}
-            {% endif %}
-            </th>
-          {%- endfor -%}
-          </tr>
-        </thead>
-        <tbody>
-        {% set canViewAll = handler.user.own(tdoc) or model.contest.canShowRecord.call(handler, tdoc) %}
-        {%- for row in rows -%}{% if loop.index0 > 0 %}
-          <tr>
-            {%- for column in row -%}
-              <td class="col--{{ rows[0][loop.index0]['type'] }}"{% if column.style %} style="{{ column.style }}"{% endif %}>
-              {% if column.type == 'user' %}
+<div class="row" style="max-width: 100%;">
+  <div class="medium-12 columns">
+    <div class="section visible">
+      <div class="section__header">
+        <a class="button" target="_blank" href="{{ url(type + '_scoreboard_download', tid=tdoc.docId, ext='html') }}">
+          <span class="icon icon-download"></span> {{ _('Export as HTML') }}
+        </a>
+        <a class="button" href="{{ url(type + '_scoreboard_download', tid=tdoc.docId, ext='csv') }}">
+          <span class="icon icon-download"></span> {{ _('Export as CSV') }}
+        </a>
+      </div>
+      <div class="section__body no-padding overflow-hidden-horizontal">
+        <table class="data-table">
+          <colgroup>
+            {%- for column in rows[0] -%}
+            <col class="col--{{ column.type }}">
+            {%- endfor -%}
+          </colgroup>
+          <thead>
+            <tr>
+              {%- for column in rows[0] -%}
+              <th class="col--{{ column.type }}">
+                {% if column.type == 'problem_detail' %}
+                <a href="{{ url('problem_detail', pid=column.raw, query={tid:tdoc.docId}) }}"
+                  data-tooltip="{{ pdict[column.raw].title }}">{{ column.value }}</a>
+                {% else %}
+                {{ column.value }}
+                {% endif %}
+              </th>
+              {%- endfor -%}
+            </tr>
+          </thead>
+          <tbody>
+            {% set canViewAll = handler.user.own(tdoc) or model.contest.canShowRecord.call(handler, tdoc) %}
+            {%- for row in rows -%}{% if loop.index0 > 0 %}
+            <tr>
+              {%- for column in row -%}
+              <td class="col--{{ rows[0][loop.index0]['type'] }}" {% if column.style %} style="{{ column.style }}" {%
+                endif %}>
+                {% if column.type == 'user' %}
                 {% set canView = canViewAll or handler.user._id == column.raw %}
                 {{ user.render_inline(udict[column.raw], badge=false) }}
-              {% elif column.type == 'record' and column.raw %}
+                <script>
+                  //console.log("udict:" + {{ udict[column.raw] }});
+                </script>
+                {% elif column.type == 'record' and column.raw %}
                 <a href="{{ url('record_detail', rid=column.raw) if canView else '' }}">
-                  <span style="font-weight:bold;color:{{ utils.status.getScoreColor(column.score|default(column.value)) }}">{{ column.value|replaceBr|safe }}</span>
+                  <span
+                    style="font-weight:bold;color:{{ utils.status.getScoreColor(column.score|default(column.value)) }}">{{
+                    column.value|replaceBr|safe }}</span>
                 </a>
-              {% elif column.type == 'records' %}
+                {% elif column.type == 'records' %}
                 {%- for record in column.raw -%}
-                  {% if loop.index0 %}/{% endif %}
-                  {% if record.raw %}
-                    <a href="{{ url('record_detail', rid=record.raw) if canView else '' }}">
-                      <span style="font-weight:bold;color:{{ utils.status.getScoreColor(record.score|default(record.value)) }}">{{ record.value|replaceBr|safe }}</span>
-                    </a>
-                  {% else %}
-                    {{ record.value|replaceBr|safe }}
-                  {% endif %}
+                {% if loop.index0 %}/{% endif %}
+                {% if record.raw %}
+                <a href="{{ url('record_detail', rid=record.raw) if canView else '' }}">
+                  <span
+                    style="font-weight:bold;color:{{ utils.status.getScoreColor(record.score|default(record.value)) }}">{{
+                    record.value|replaceBr|safe }}</span>
+                </a>
+                {% else %}
+                {{ record.value|replaceBr|safe }}
+                {% endif %}
                 {%- endfor -%}
-              {% else %}
+                {% else %}
                 {{ column.value|replaceBr|safe }}
-              {% endif %}
+                {% endif %}
               </td>
-            {%- endfor -%}
-          </tr>
-        {% endif %}{%- endfor -%}
-        </tbody>
-      </table>
-      {{ paginator.render(page, nPages) }}
+              {%- endfor -%}
+            </tr>
+            {% endif %}{%- endfor -%}
+          </tbody>
+        </table>
+        {{ paginator.render(page, nPages) }}
+      </div>
     </div>
   </div>
-</div></div>
+</div>
 {% endblock %}
