--- a/packages/ui-default/templates/partials/header_mobile.html
+++ b/packages/ui-default/templates/partials/header_mobile.html
@@ -1,10 +1,21 @@
 <div class="header--mobile">
-  <div class="row"><div class="columns clearfix">
-    <div class="float-left">
-      <a class="header--mobile__domain" href="/" target="_self">&nbsp;</a>
+  <div class="row">
+    <div class="columns clearfix">
+      <div class="float-left">
+        <!-- <a class="header--mobile__domain" href="/" target="_self">&nbsp;</a> -->
+        <a href="/" style="text-decoration: none;">
+          <h2 style="height: 36px;
+          line-height: 36px;
+          font-weight: bolder;
+          font-size: larger;
+          margin: 0;
+          color: white;">HGNUOJ
+          </h2>
+        </a>
+      </div>
+      <div class="float-right">
+        {% include "partials/hamburger.html" %}
+      </div>
     </div>
-    <div class="float-right">
-      {% include "partials/hamburger.html" %}
-    </div>
-  </div></div>
+  </div>
 </div>
