ui: monaco: better auto-resize

--- a/packages/ui-default/templates/domain_group.html
+++ b/packages/ui-default/templates/domain_group.html
@@ -43,6 +43,7 @@
   </div>
   <div class="section__body">
     <button class="rounded button" name="remove_selected">{{ _('Remove Selected Group') }}</button>
+    <button class="rounded button" name="save_all">{{ _('Save All Changes') }}</button>
   </div>
 </div>
 {% endblock %}
