--- a/packages/ui-default/templates/homework_edit.html
+++ b/packages/ui-default/templates/homework_edit.html
@@ -54,12 +54,21 @@
                 row:false
             }) }}
           </div>
-          {{ form.form_text({
-              columns:4,
-              label:'Extension (days)',
-              name:'extensionDays',
-              value:extension_days|default(0)
-          }) }}
+          <div class="row">
+            {{ form.form_text({
+                row:false,
+                columns:4,
+                label:'Extension (days)',
+                name:'extensionDays',
+                value:extension_days
+            }) }}
+            {{ form.form_text({
+                columns:4,
+                label:'Assign',
+                name:'assign',
+                value:tdoc.assign|default('')
+            }) }}
+          </div>
           {{ form.checkbox({
                 columns:4,
                 label:'将作业置顶',
@@ -69,7 +78,7 @@
           <div class="row"><div class="columns">
             <label>
               {{ _('Extension Score Penalty') }}
-              <textarea name="penaltyRules" class="monospace textbox" style="height:100px">{% if tdoc %}{{ penaltyRules }}{% else %}{% include 'partials/homework_default_penalty_rules.yaml' %}{% endif %}</textarea>
+              <textarea name="penaltyRules" class="monospace textbox" data-yaml>{% if tdoc %}{{ penaltyRules }}{% else %}{% include 'partials/homework_default_penalty_rules.yaml' %}{% endif %}</textarea>
             </label>
           </div></div>
           {{ form.form_text({
