--- a/packages/ui-default/templates/components/sidemenu.html
+++ b/packages/ui-default/templates/components/sidemenu.html
@@ -1,4 +1,4 @@
-{% macro render_item(icon_name, page_name, args={}, label=none, menu_item=none) %}
+{% macro render_item(icon_name, page_name, args={}, label=none, menu_item) %}
 {% set target_url = url(page_name, args) if page_name else '#' %}
 <li class="menu__item" id="menu-item-{{ menu_item|default(page_name) }}">
   <a href="{{ target_url }}" class="menu__link{% if handler.request.path == target_url %} active{% endif %}">
