--- a/packages/ui-default/components/navigation/navigation.page.styl
+++ b/packages/ui-default/components/navigation/navigation.page.styl
@@ -14,7 +14,9 @@
   background: rgba(#FFF, 0.98)
 
   .nav__logo
-    width: rem($nav-logo-width + 10)
+    width: 6.4375rem
+    height: 2.5rem
+    margin: 0.1rem
     opacity: 1
 
   .nav__item
