--- a/packages/ui-default/templates/partials/footer.html
+++ b/packages/ui-default/templates/partials/footer.html
@@ -35,8 +35,6 @@
           </span>
         </h1>
         <div class="footer__category__expander"><ul class="footer__category__list">
-          <li class="footer__category__item">开发与维护：杨旭龙、王树淳、王国斌、宋文宇</li>
-          <li class="footer__category__item">老师：肖飞、关玉蓉、魏银珍、周芬</li>
         </ul></div>
       </div>
     </div>
@@ -75,7 +73,7 @@
           <!-- Prepare {{ handler.args.__prepareDone - handler.args.__prepare }}ms -->
           <!-- Method {{ handler.args.__methodDone - handler.args.__method }}ms -->
           <li class="footer__extra-link-item">Powered by <a href="https://hydro.js.org">Hydro v{{ global.Hydro.version.hydrooj }}</a></li>
-          <li class="footer__extra-link-item">Modified by <a href="/class/ACM%20TEAM">HGNU ACM TEAM</a><a href="https://github.com/HGNU/hgnuoj-hydro">(Repo Link)</a></li>
+          <li class="footer__extra-link-item">技术支持 <a href="https://ptezoj.com">莆田二中算法协会</a><a href="https://github.com/HGNU/hgnuoj-hydro">(HGNUOJ)</a></li>
         </ol>
       </div>
     </div>
